crates/carta/tests/snapshots/golden_e2e__jira__latex__headings.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\section{Heading one}

\subsection{Heading two}

\subsubsection{Heading three}

\paragraph{Heading four}

\subparagraph{Heading five}

Heading six
