crates/carta/tests/snapshots/golden_e2e__jira__latex__images.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
An image \pandocbounded{\includegraphics[keepaspectratio]{photo.png}} in
a line.

A sized one
\includegraphics[width=2.08333in,height=\textheight,keepaspectratio]{chart.png}
follows.
