crates/carta/tests/snapshots/golden_e2e__jira__latex__link-label-no-autolink.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\href{http://target.example}{http://example.com}
