crates/carta/tests/snapshots/golden_e2e__jira__latex__link-multiline.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\href{http://x.com}{a\\
b} keeps the break inside the link label.
