crates/carta/tests/snapshots/golden_e2e__jira__latex__macro-mid-paragraph.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
word

\begin{verbatim}
raw
\end{verbatim}
