crates/carta/tests/snapshots/golden_e2e__jira__latex__monospace-multiline.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\texttt{a\ b} joins the monospaced text across a break.

Nested \texttt{a\ b\ c} stays one monospaced span.
