crates/carta/tests/snapshots/golden_e2e__jira__latex__noformat-trailing.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{verbatim}
inline start
literal *body*
\end{verbatim}

tail text
