crates/carta/tests/snapshots/golden_e2e__jira__latex__panel-trailing.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\{panel:title=x\}trailing\\
body
